--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <form id="task_form">
         <input type="text" placeholder="Please write down what you need to do" name="task">
-        <button type="submit"><b>Add task</b></button>
+        <button type="submit"><b> + Add task</b></button>
     </form>
 
     <ul class="todoList">
