--- a/index.html
+++ b/index.html
@@ -16,23 +16,25 @@
         <button type="submit"><b> + Add task</b></button>
     </form>
 
-    <ul class="todoList">
-        <li class="done"> 
-            <input type="checkbox" id="1">
-            <label for="1">world</label>
-            <button type="button" class="removeTask">
-                <svg viewBox="0 0 24 24" fill="none">
-                    <path d="M17.25 17.25L6.75 6.75" 
-                    stroke="#2e2f50" stroke-width="1.5"
-                    stroke-linecap="round"
-                    stroke-linejoin="round" />
-                    <path d="M17.25 6.75L6.75 17.25"
-                    stroke="#2e2f50" stroke-width="1.5"
-                    stroke-linecap="round"
-                    stroke-linejoin="round" />
-                </svg>
-            </button>
+    <ul class="stats-list">
+        <li>
+            <strong>Remaining</strong>
+            <span class="remaning-count">0</span>
         </li>
+        <li>
+            <strong>Done</strong>
+            <span class="done-count">0</span>
+        </li>
+        <li>
+            <strong>Total</strong>
+            <span class="total-count">0</span>
+        </li>
+    </ul>
+
+
+    
+    <ul class="todoList">
+        
     </ul>
     <script src="./todo.js"></script>
 </body>
